Parser/dbotter.output
Terminals unused in grammar

   VARIABLE
   FILEEND
   AND


Rules useless in parser due to conflicts

   29 log: connlog


State 0 conflicts: 3 shift/reduce
State 14 conflicts: 3 shift/reduce
State 15 conflicts: 3 shift/reduce
State 16 conflicts: 3 shift/reduce
State 17 conflicts: 4 shift/reduce
State 20 conflicts: 3 shift/reduce
State 23 conflicts: 5 shift/reduce
State 24 conflicts: 1 reduce/reduce
State 25 conflicts: 17 reduce/reduce
State 28 conflicts: 3 shift/reduce
State 29 conflicts: 3 shift/reduce
State 30 conflicts: 3 shift/reduce
State 31 conflicts: 3 shift/reduce
State 32 conflicts: 4 shift/reduce, 17 reduce/reduce
State 34 conflicts: 4 shift/reduce, 17 reduce/reduce
State 36 conflicts: 1 shift/reduce
State 46 conflicts: 3 shift/reduce
State 47 conflicts: 3 shift/reduce
State 48 conflicts: 3 shift/reduce
State 49 conflicts: 3 shift/reduce
State 50 conflicts: 3 shift/reduce
State 51 conflicts: 3 shift/reduce
State 52 conflicts: 3 shift/reduce
State 53 conflicts: 3 shift/reduce
State 54 conflicts: 3 shift/reduce
State 55 conflicts: 3 shift/reduce
State 56 conflicts: 3 shift/reduce
State 57 conflicts: 3 shift/reduce
State 58 conflicts: 3 shift/reduce
State 59 conflicts: 4 shift/reduce
State 64 conflicts: 3 shift/reduce
State 67 conflicts: 3 shift/reduce
State 69 conflicts: 5 shift/reduce, 8 reduce/reduce
State 70 conflicts: 5 shift/reduce, 8 reduce/reduce
State 71 conflicts: 4 shift/reduce, 8 reduce/reduce
State 72 conflicts: 5 shift/reduce, 8 reduce/reduce
State 73 conflicts: 5 shift/reduce, 8 reduce/reduce
State 81 conflicts: 2 reduce/reduce
State 92 conflicts: 3 shift/reduce
State 93 conflicts: 3 shift/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | sentencelist

    3 sentence: assertion

    4 sentencelist: sentence
    5             | sentencelist sentence

    6 assertion: primsentence '.'

    7 primsentence: log
    8             | loglist

    9 term: prim
   10     | prim '(' ')'
   11     | prim '(' termlist ')'
   12     | '(' term ')'
   13     | EQ '(' termlist ')'
   14     | NEQ '(' termlist ')'
   15     | term NEQ term
   16     | term EQ term
   17     | term '+' term
   18     | term '-' term
   19     | term '*' term
   20     | '-' term
   21     | '~' term
   22     | '(' loglist ')'
   23     | '[' termlist ']'
   24     | '[' ']'
   25     | connlog

   26 termlist: term
   27         | term ',' termlist

   28 log: term
   29    | connlog

   30 connlog: %empty
   31        | log '&' log
   32        | log NAND log
   33        | log '|' log
   34        | log NOR log
   35        | log IMP log
   36        | log RIMP log
   37        | log EQV log
   38        | log NEQV log
   39        | '?' '[' termlist ']' ':' log
   40        | '!' '[' termlist ']' ':' log
   41        | '-' log
   42        | '~' log

   43 loglist: log
   44        | log '|' loglist

   45 prim: TINT
   46     | TFLOAT
   47     | DATE
   48     | TIME
   49     | STRING
   50     | VAR
   51     | URI
   52     | ID
   53     | TCONST


Terminals, with rules where they appear

$end (0) 0
'!' (33) 40
'&' (38) 31
'(' (40) 10 11 12 13 14 22
')' (41) 10 11 12 13 14 22
'*' (42) 19
'+' (43) 17
',' (44) 27
'-' (45) 18 20 41
'.' (46) 6
':' (58) 39 40
'?' (63) 39
'[' (91) 23 24 39 40
']' (93) 23 24 39 40
'|' (124) 33 44
'~' (126) 21 42
error (256)
VARIABLE (258)
FILEEND (259)
TINT (260) 45
TFLOAT (261) 46
DATE (262) 47
TIME (263) 48
STRING (264) 49
ID (265) 52
URI (266) 51
TCONST (267) 53
VAR (268) 50
NEQ (269) 14 15
EQ (270) 13 16
IMP (271) 35
AND (272)
EQV (273) 37
NEQV (274) 38
RIMP (275) 36
NOR (276) 34
NAND (277) 32


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
input (39)
    on left: 1 2, on right: 0
sentence (40)
    on left: 3, on right: 4 5
sentencelist (41)
    on left: 4 5, on right: 2 5
assertion (42)
    on left: 6, on right: 3
primsentence (43)
    on left: 7 8, on right: 6
term (44)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25, on right:
    12 15 16 17 18 19 20 21 26 27 28
termlist (45)
    on left: 26 27, on right: 11 13 14 23 27 39 40
log (46)
    on left: 28 29, on right: 7 31 32 33 34 35 36 37 38 39 40 41 42
    43 44
connlog (47)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42, on right: 25 29
loglist (48)
    on left: 43 44, on right: 8 22 44
prim (49)
    on left: 45 46 47 48 49 50 51 52 53, on right: 9 10 11


State 0

    0 $accept: . input $end

    TINT    shift, and go to state 1
    TFLOAT  shift, and go to state 2
    DATE    shift, and go to state 3
    TIME    shift, and go to state 4
    STRING  shift, and go to state 5
    ID      shift, and go to state 6
    URI     shift, and go to state 7
    TCONST  shift, and go to state 8
    VAR     shift, and go to state 9
    NEQ     shift, and go to state 10
    EQ      shift, and go to state 11
    '?'     shift, and go to state 12
    '!'     shift, and go to state 13
    '-'     shift, and go to state 14
    '~'     shift, and go to state 15
    '('     shift, and go to state 16
    '['     shift, and go to state 17

    $end      reduce using rule 1 (input)
    NEQ       [reduce using rule 30 (connlog)]
    EQ        [reduce using rule 30 (connlog)]
    '-'       [reduce using rule 30 (connlog)]
    $default  reduce using rule 30 (connlog)

    input         go to state 18
    sentence      go to state 19
    sentencelist  go to state 20
    assertion     go to state 21
    primsentence  go to state 22
    term          go to state 23
    log           go to state 24
    connlog       go to state 25
    loglist       go to state 26
    prim          go to state 27


State 1

   45 prim: TINT .

    $default  reduce using rule 45 (prim)


State 2

   46 prim: TFLOAT .

    $default  reduce using rule 46 (prim)


State 3

   47 prim: DATE .

    $default  reduce using rule 47 (prim)


State 4

   48 prim: TIME .

    $default  reduce using rule 48 (prim)


State 5

   49 prim: STRING .

    $default  reduce using rule 49 (prim)


State 6

   52 prim: ID .

    $default  reduce using rule 52 (prim)


State 7

   51 prim: URI .

    $default  reduce using rule 51 (prim)


State 8

   53 prim: TCONST .

    $default  reduce using rule 53 (prim)


State 9

   50 prim: VAR .

    $default  reduce using rule 50 (prim)


State 10

   14 term: NEQ . '(' termlist ')'

    '('  shift, and go to state 28


State 11

   13 term: EQ . '(' termlist ')'

    '('  shift, and go to state 29


State 12

   39 connlog: '?' . '[' termlist ']' ':' log

    '['  shift, and go to state 30


State 13

   40 connlog: '!' . '[' termlist ']' ':' log

    '['  shift, and go to state 31


State 14

   20 term: '-' . term
   41 connlog: '-' . log

    TINT    shift, and go to state 1
    TFLOAT  shift, and go to state 2
    DATE    shift, and go to state 3
    TIME    shift, and go to state 4
    STRING  shift, and go to state 5
    ID      shift, and go to state 6
    URI     shift, and go to state 7
    TCONST  shift, and go to state 8
    VAR     shift, and go to state 9
    NEQ     shift, and go to state 10
    EQ      shift, and go to state 11
    '?'     shift, and go to state 12
    '!'     shift, and go to state 13
    '-'     shift, and go to state 14
    '~'     shift, and go to state 15
    '('     shift, and go to state 16
    '['     shift, and go to state 17

    NEQ       [reduce using rule 30 (connlog)]
    EQ        [reduce using rule 30 (connlog)]
    '-'       [reduce using rule 30 (connlog)]
    $default  reduce using rule 30 (connlog)

    term     go to state 32
    log      go to state 33
    connlog  go to state 25
    prim     go to state 27


State 15

   21 term: '~' . term
   42 connlog: '~' . log

    TINT    shift, and go to state 1
    TFLOAT  shift, and go to state 2
    DATE    shift, and go to state 3
    TIME    shift, and go to state 4
    STRING  shift, and go to state 5
    ID      shift, and go to state 6
    URI     shift, and go to state 7
    TCONST  shift, and go to state 8
    VAR     shift, and go to state 9
    NEQ     shift, and go to state 10
    EQ      shift, and go to state 11
    '?'     shift, and go to state 12
    '!'     shift, and go to state 13
    '-'     shift, and go to state 14
    '~'     shift, and go to state 15
    '('     shift, and go to state 16
    '['     shift, and go to state 17

    NEQ       [reduce using rule 30 (connlog)]
    EQ        [reduce using rule 30 (connlog)]
    '-'       [reduce using rule 30 (connlog)]
    $default  reduce using rule 30 (connlog)

    term     go to state 34
    log      go to state 35
    connlog  go to state 25
    prim     go to state 27


State 16

   12 term: '(' . term ')'
   22     | '(' . loglist ')'

    TINT    shift, and go to state 1
    TFLOAT  shift, and go to state 2
    DATE    shift, and go to state 3
    TIME    shift, and go to state 4
    STRING  shift, and go to state 5
    ID      shift, and go to state 6
    URI     shift, and go to state 7
    TCONST  shift, and go to state 8
    VAR     shift, and go to state 9
    NEQ     shift, and go to state 10
    EQ      shift, and go to state 11
    '?'     shift, and go to state 12
    '!'     shift, and go to state 13
    '-'     shift, and go to state 14
    '~'     shift, and go to state 15
    '('     shift, and go to state 16
    '['     shift, and go to state 17

    NEQ       [reduce using rule 30 (connlog)]
    EQ        [reduce using rule 30 (connlog)]
    '-'       [reduce using rule 30 (connlog)]
    $default  reduce using rule 30 (connlog)

    term     go to state 36
    log      go to state 37
    connlog  go to state 25
    loglist  go to state 38
    prim     go to state 27


State 17

   23 term: '[' . termlist ']'
   24     | '[' . ']'

    TINT    shift, and go to state 1
    TFLOAT  shift, and go to state 2
    DATE    shift, and go to state 3
    TIME    shift, and go to state 4
    STRING  shift, and go to state 5
    ID      shift, and go to state 6
    URI     shift, and go to state 7
    TCONST  shift, and go to state 8
    VAR     shift, and go to state 9
    NEQ     shift, and go to state 10
    EQ      shift, and go to state 11
    '?'     shift, and go to state 12
    '!'     shift, and go to state 13
    '-'     shift, and go to state 14
    '~'     shift, and go to state 15
    '('     shift, and go to state 16
    '['     shift, and go to state 17
    ']'     shift, and go to state 39

    NEQ       [reduce using rule 30 (connlog)]
    EQ        [reduce using rule 30 (connlog)]
    '-'       [reduce using rule 30 (connlog)]
    ']'       [reduce using rule 30 (connlog)]
    $default  reduce using rule 30 (connlog)

    term      go to state 40
    termlist  go to state 41
    log       go to state 42
    connlog   go to state 25
    prim      go to state 27


State 18

    0 $accept: input . $end

    $end  shift, and go to state 43


State 19

    4 sentencelist: sentence .

    $default  reduce using rule 4 (sentencelist)


State 20

    2 input: sentencelist .
    5 sentencelist: sentencelist . sentence

    TINT    shift, and go to state 1
    TFLOAT  shift, and go to state 2
    DATE    shift, and go to state 3
    TIME    shift, and go to state 4
    STRING  shift, and go to state 5
    ID      shift, and go to state 6
    URI     shift, and go to state 7
    TCONST  shift, and go to state 8
    VAR     shift, and go to state 9
    NEQ     shift, and go to state 10
    EQ      shift, and go to state 11
    '?'     shift, and go to state 12
    '!'     shift, and go to state 13
    '-'     shift, and go to state 14
    '~'     shift, and go to state 15
    '('     shift, and go to state 16
    '['     shift, and go to state 17

    $end      reduce using rule 2 (input)
    NEQ       [reduce using rule 30 (connlog)]
    EQ        [reduce using rule 30 (connlog)]
    '-'       [reduce using rule 30 (connlog)]
    $default  reduce using rule 30 (connlog)

    sentence      go to state 44
    assertion     go to state 21
    primsentence  go to state 22
    term          go to state 23
    log           go to state 24
    connlog       go to state 25
    loglist       go to state 26
    prim          go to state 27


State 21

    3 sentence: assertion .

    $default  reduce using rule 3 (sentence)


State 22

    6 assertion: primsentence . '.'

    '.'  shift, and go to state 45


State 23

   15 term: term . NEQ term
   16     | term . EQ term
   17     | term . '+' term
   18     | term . '-' term
   19     | term . '*' term
   28 log: term .

    NEQ  shift, and go to state 46
    EQ   shift, and go to state 47
    '-'  shift, and go to state 48
    '+'  shift, and go to state 49
    '*'  shift, and go to state 50

    NEQ       [reduce using rule 28 (log)]
    EQ        [reduce using rule 28 (log)]
    '-'       [reduce using rule 28 (log)]
    '+'       [reduce using rule 28 (log)]
    '*'       [reduce using rule 28 (log)]
    $default  reduce using rule 28 (log)


State 24

    7 primsentence: log .
   31 connlog: log . '&' log
   32        | log . NAND log
   33        | log . '|' log
   34        | log . NOR log
   35        | log . IMP log
   36        | log . RIMP log
   37        | log . EQV log
   38        | log . NEQV log
   43 loglist: log .
   44        | log . '|' loglist

    IMP   shift, and go to state 51
    EQV   shift, and go to state 52
    NEQV  shift, and go to state 53
    RIMP  shift, and go to state 54
    NOR   shift, and go to state 55
    NAND  shift, and go to state 56
    '&'   shift, and go to state 57
    '|'   shift, and go to state 58

    '.'       reduce using rule 7 (primsentence)
    '.'       [reduce using rule 43 (loglist)]
    $default  reduce using rule 7 (primsentence)


State 25

   25 term: connlog .
   29 log: connlog .

    NEQ       reduce using rule 25 (term)
    NEQ       [reduce using rule 29 (log)]
    EQ        reduce using rule 25 (term)
    EQ        [reduce using rule 29 (log)]
    IMP       reduce using rule 25 (term)
    IMP       [reduce using rule 29 (log)]
    EQV       reduce using rule 25 (term)
    EQV       [reduce using rule 29 (log)]
    NEQV      reduce using rule 25 (term)
    NEQV      [reduce using rule 29 (log)]
    RIMP      reduce using rule 25 (term)
    RIMP      [reduce using rule 29 (log)]
    NOR       reduce using rule 25 (term)
    NOR       [reduce using rule 29 (log)]
    NAND      reduce using rule 25 (term)
    NAND      [reduce using rule 29 (log)]
    '&'       reduce using rule 25 (term)
    '&'       [reduce using rule 29 (log)]
    '|'       reduce using rule 25 (term)
    '|'       [reduce using rule 29 (log)]
    '-'       reduce using rule 25 (term)
    '-'       [reduce using rule 29 (log)]
    '.'       reduce using rule 25 (term)
    '.'       [reduce using rule 29 (log)]
    ')'       reduce using rule 25 (term)
    ')'       [reduce using rule 29 (log)]
    '+'       reduce using rule 25 (term)
    '+'       [reduce using rule 29 (log)]
    '*'       reduce using rule 25 (term)
    '*'       [reduce using rule 29 (log)]
    ']'       reduce using rule 25 (term)
    ']'       [reduce using rule 29 (log)]
    ','       reduce using rule 25 (term)
    ','       [reduce using rule 29 (log)]
    $default  reduce using rule 25 (term)


State 26

    8 primsentence: loglist .

    $default  reduce using rule 8 (primsentence)


State 27

    9 term: prim .
   10     | prim . '(' ')'
   11     | prim . '(' termlist ')'

    '('  shift, and go to state 59

    $default  reduce using rule 9 (term)


State 28

   14 term: NEQ '(' . termlist ')'

    TINT    shift, and go to state 1
    TFLOAT  shift, and go to state 2
    DATE    shift, and go to state 3
    TIME    shift, and go to state 4
    STRING  shift, and go to state 5
    ID      shift, and go to state 6
    URI     shift, and go to state 7
    TCONST  shift, and go to state 8
    VAR     shift, and go to state 9
    NEQ     shift, and go to state 10
    EQ      shift, and go to state 11
    '?'     shift, and go to state 12
    '!'     shift, and go to state 13
    '-'     shift, and go to state 14
    '~'     shift, and go to state 15
    '('     shift, and go to state 16
    '['     shift, and go to state 17

    NEQ       [reduce using rule 30 (connlog)]
    EQ        [reduce using rule 30 (connlog)]
    '-'       [reduce using rule 30 (connlog)]
    $default  reduce using rule 30 (connlog)

    term      go to state 40
    termlist  go to state 60
    log       go to state 42
    connlog   go to state 25
    prim      go to state 27


State 29

   13 term: EQ '(' . termlist ')'

    TINT    shift, and go to state 1
    TFLOAT  shift, and go to state 2
    DATE    shift, and go to state 3
    TIME    shift, and go to state 4
    STRING  shift, and go to state 5
    ID      shift, and go to state 6
    URI     shift, and go to state 7
    TCONST  shift, and go to state 8
    VAR     shift, and go to state 9
    NEQ     shift, and go to state 10
    EQ      shift, and go to state 11
    '?'     shift, and go to state 12
    '!'     shift, and go to state 13
    '-'     shift, and go to state 14
    '~'     shift, and go to state 15
    '('     shift, and go to state 16
    '['     shift, and go to state 17

    NEQ       [reduce using rule 30 (connlog)]
    EQ        [reduce using rule 30 (connlog)]
    '-'       [reduce using rule 30 (connlog)]
    $default  reduce using rule 30 (connlog)

    term      go to state 40
    termlist  go to state 61
    log       go to state 42
    connlog   go to state 25
    prim      go to state 27


State 30

   39 connlog: '?' '[' . termlist ']' ':' log

    TINT    shift, and go to state 1
    TFLOAT  shift, and go to state 2
    DATE    shift, and go to state 3
    TIME    shift, and go to state 4
    STRING  shift, and go to state 5
    ID      shift, and go to state 6
    URI     shift, and go to state 7
    TCONST  shift, and go to state 8
    VAR     shift, and go to state 9
    NEQ     shift, and go to state 10
    EQ      shift, and go to state 11
    '?'     shift, and go to state 12
    '!'     shift, and go to state 13
    '-'     shift, and go to state 14
    '~'     shift, and go to state 15
    '('     shift, and go to state 16
    '['     shift, and go to state 17

    NEQ       [reduce using rule 30 (connlog)]
    EQ        [reduce using rule 30 (connlog)]
    '-'       [reduce using rule 30 (connlog)]
    $default  reduce using rule 30 (connlog)

    term      go to state 40
    termlist  go to state 62
    log       go to state 42
    connlog   go to state 25
    prim      go to state 27


State 31

   40 connlog: '!' '[' . termlist ']' ':' log

    TINT    shift, and go to state 1
    TFLOAT  shift, and go to state 2
    DATE    shift, and go to state 3
    TIME    shift, and go to state 4
    STRING  shift, and go to state 5
    ID      shift, and go to state 6
    URI     shift, and go to state 7
    TCONST  shift, and go to state 8
    VAR     shift, and go to state 9
    NEQ     shift, and go to state 10
    EQ      shift, and go to state 11
    '?'     shift, and go to state 12
    '!'     shift, and go to state 13
    '-'     shift, and go to state 14
    '~'     shift, and go to state 15
    '('     shift, and go to state 16
    '['     shift, and go to state 17

    NEQ       [reduce using rule 30 (connlog)]
    EQ        [reduce using rule 30 (connlog)]
    '-'       [reduce using rule 30 (connlog)]
    $default  reduce using rule 30 (connlog)

    term      go to state 40
    termlist  go to state 63
    log       go to state 42
    connlog   go to state 25
    prim      go to state 27


State 32

   15 term: term . NEQ term
   16     | term . EQ term
   17     | term . '+' term
   18     | term . '-' term
   19     | term . '*' term
   20     | '-' term .
   28 log: term .

    NEQ  shift, and go to state 46
    EQ   shift, and go to state 47
    '+'  shift, and go to state 49
    '*'  shift, and go to state 50

    NEQ       [reduce using rule 20 (term)]
    NEQ       [reduce using rule 28 (log)]
    EQ        [reduce using rule 20 (term)]
    EQ        [reduce using rule 28 (log)]
    IMP       reduce using rule 20 (term)
    IMP       [reduce using rule 28 (log)]
    EQV       reduce using rule 20 (term)
    EQV       [reduce using rule 28 (log)]
    NEQV      reduce using rule 20 (term)
    NEQV      [reduce using rule 28 (log)]
    RIMP      reduce using rule 20 (term)
    RIMP      [reduce using rule 28 (log)]
    NOR       reduce using rule 20 (term)
    NOR       [reduce using rule 28 (log)]
    NAND      reduce using rule 20 (term)
    NAND      [reduce using rule 28 (log)]
    '&'       reduce using rule 20 (term)
    '&'       [reduce using rule 28 (log)]
    '|'       reduce using rule 20 (term)
    '|'       [reduce using rule 28 (log)]
    '-'       reduce using rule 20 (term)
    '-'       [reduce using rule 28 (log)]
    '.'       reduce using rule 20 (term)
    '.'       [reduce using rule 28 (log)]
    ')'       reduce using rule 20 (term)
    ')'       [reduce using rule 28 (log)]
    '+'       [reduce using rule 20 (term)]
    '+'       [reduce using rule 28 (log)]
    '*'       [reduce using rule 20 (term)]
    '*'       [reduce using rule 28 (log)]
    ']'       reduce using rule 20 (term)
    ']'       [reduce using rule 28 (log)]
    ','       reduce using rule 20 (term)
    ','       [reduce using rule 28 (log)]
    $default  reduce using rule 20 (term)


State 33

   31 connlog: log . '&' log
   32        | log . NAND log
   33        | log . '|' log
   34        | log . NOR log
   35        | log . IMP log
   36        | log . RIMP log
   37        | log . EQV log
   38        | log . NEQV log
   41        | '-' log .

    $default  reduce using rule 41 (connlog)


State 34

   15 term: term . NEQ term
   16     | term . EQ term
   17     | term . '+' term
   18     | term . '-' term
   19     | term . '*' term
   21     | '~' term .
   28 log: term .

    NEQ  shift, and go to state 46
    EQ   shift, and go to state 47
    '+'  shift, and go to state 49
    '*'  shift, and go to state 50

    NEQ       [reduce using rule 21 (term)]
    NEQ       [reduce using rule 28 (log)]
    EQ        [reduce using rule 21 (term)]
    EQ        [reduce using rule 28 (log)]
    IMP       reduce using rule 21 (term)
    IMP       [reduce using rule 28 (log)]
    EQV       reduce using rule 21 (term)
    EQV       [reduce using rule 28 (log)]
    NEQV      reduce using rule 21 (term)
    NEQV      [reduce using rule 28 (log)]
    RIMP      reduce using rule 21 (term)
    RIMP      [reduce using rule 28 (log)]
    NOR       reduce using rule 21 (term)
    NOR       [reduce using rule 28 (log)]
    NAND      reduce using rule 21 (term)
    NAND      [reduce using rule 28 (log)]
    '&'       reduce using rule 21 (term)
    '&'       [reduce using rule 28 (log)]
    '|'       reduce using rule 21 (term)
    '|'       [reduce using rule 28 (log)]
    '-'       reduce using rule 21 (term)
    '-'       [reduce using rule 28 (log)]
    '.'       reduce using rule 21 (term)
    '.'       [reduce using rule 28 (log)]
    ')'       reduce using rule 21 (term)
    ')'       [reduce using rule 28 (log)]
    '+'       [reduce using rule 21 (term)]
    '+'       [reduce using rule 28 (log)]
    '*'       [reduce using rule 21 (term)]
    '*'       [reduce using rule 28 (log)]
    ']'       reduce using rule 21 (term)
    ']'       [reduce using rule 28 (log)]
    ','       reduce using rule 21 (term)
    ','       [reduce using rule 28 (log)]
    $default  reduce using rule 21 (term)


State 35

   31 connlog: log . '&' log
   32        | log . NAND log
   33        | log . '|' log
   34        | log . NOR log
   35        | log . IMP log
   36        | log . RIMP log
   37        | log . EQV log
   38        | log . NEQV log
   42        | '~' log .

    $default  reduce using rule 42 (connlog)


State 36

   12 term: '(' term . ')'
   15     | term . NEQ term
   16     | term . EQ term
   17     | term . '+' term
   18     | term . '-' term
   19     | term . '*' term
   28 log: term .
